# online-c-program-evaluation

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
api/: CMakeLists.txt
api/include/ocpe/: server.hpp
api/src/: main.cpp  server.cpp
cmake/: Dependencies.cmake
docker/: Dockerfile  nginx.conf
problems/fibonacci/: meta.json
problems/stress_120/: meta.json
problems/stress_120/tests/: 0.in  1.in  10.in  100.in  100.out  101.in  101.out  102.in  102.out  103.in  103.out  104.in  104.out  105.in  105.out  106.in  106.out  107.in  107.out  108.in  108.out  109.in  109.out  11.in  110.in  110.out  111.in  111.out  112.in  112.out  113.in  113.out  114.in  114.out  115.in  116.in  117.in  118.in  118.out  119.in  (+129 more)
problems/sum_two/: meta.json
problems/sum_two/tests/: 1.in
sandbox/: CMakeLists.txt
sandbox/include/ocpe/: language.hpp  sandbox.hpp
sandbox/src/: compiler.cpp  language.cpp  runner.cpp  sandbox.cpp
scripts/: generate_stress_tests.py  load_test.py  start.bat  start.sh
shared/: CMakeLists.txt
shared/include/ocpe/: auth.hpp  config.hpp  json_utils.hpp  problem_loader.hpp  redis_client.hpp  submission.hpp
shared/src/: auth.cpp  config.cpp  json_utils.cpp  problem_loader.cpp  redis_client.cpp  submission.cpp
web/: app.js  index.html  style.css
worker/: CMakeLists.txt
worker/include/ocpe/: evaluator.hpp  worker.hpp
worker/src/: evaluator.cpp  main.cpp  worker.cpp
