cmake_minimum_required(VERSION 3.16)
project(OCPE VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_package(Threads REQUIRED)

include(cmake/Dependencies.cmake)

add_subdirectory(shared)
add_subdirectory(sandbox)
add_subdirectory(api)
add_subdirectory(worker)
